--- a/myapp/templates/myapp/details.html
+++ b/myapp/templates/myapp/details.html
@@ -1,6 +1,8 @@
 {% extends 'myapp/base.html' %}
 {% block content %}
     <div class="container jumbotron">
+        <button onclick="window.location='{% url 'index' %}'" class="btn btn-default">Go Back</button>
+        <hr>
         <h1>{{ entry.name }}</h1>
         <hr>
         <h5>{{ entry.date }}</h5>
