--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,25 +1,15 @@
 {% extends 'myapp/base.html' %}
 {% block content %}
     <div class="container">
-        <br>
-        <div class="row">
-            <div class="col-lg-4">
-                <h1>Calendar</h1>
-            </div>
-            <!-- /.col-lg-4 -->
-            <div class="col-lg-8">
-                <button onclick="window.location='{% url 'add' %}'" type="button" class="btn btn-success">Add Entry</button>
-            </div>
-            <!-- /.col-lg-8 -->
+        <div class="page-center">
+
+            <h1>Calendar Application</h1>
+            <p>
+                Keep track of your events.
+            </p>
+            <button onclick="window.location='login'" class="btn btn-success">Login</button>
         </div>
-        <!-- /.row -->
-        <hr>
-        <div class="row">
-            {% for entry in entries %}
-                {% include 'myapp/_calendar_entry.html' %}
-            {% endfor %}
-        </div>
-        <!-- /.row -->
+        <!-- /.page-center -->
     </div>
     <!-- /.container -->
 {% endblock %}
