--- a/myapp/templates/myapp/form.html
+++ b/myapp/templates/myapp/form.html
@@ -14,7 +14,7 @@
     </div>
     <!-- /.row -->
         <hr>
-        <form action="" method="post">
+        <form method="post">
             {% csrf_token %}
             {% for field in form %}
                 {{ field.errors }}
